@@ -152,7 +152,8 @@ static int _create_dir_recursive(const char *dir)
 		if (*orig) {
 			rc = mkdir(orig, 0777);
 			if (rc < 0 && errno != EEXIST) {
-				log_sys_error("mkdir", orig);
+				if (errno != EROFS)
+					log_sys_error("mkdir", orig);
 				dbg_free(orig);
 				return 0;
 			}
@@ -164,7 +165,8 @@ static int _create_dir_recursive(const char *dir)
 	/* Create final directory */
 	rc = mkdir(dir, 0777);
 	if (rc < 0 && errno != EEXIST) {
-		log_sys_error("mkdir", dir);
+		if (errno != EROFS)
+			log_sys_error("mkdir", dir);
 		return 0;
 	}
 	return 1;
